# playwright_python

./: .gitignore  README.md  pyproject.toml
test/: conftest.py  constants.py  skipped_tests_config.py
test/domains/api_client/: base_api_client.py  filter_api_client.py  rest_client.py
test/domains/browsers/: spawn_browser.py
test/domains/config/: environments_handler.py
test/domains/config/environments/: dev.json
test/domains/enum/api/: severity_types.py
test/domains/enum/api/filter_endpoints/: endpoints.py
test/domains/enum/base/: base_enum.py
test/domains/enum/users/: users.py
test/domains/page_objects/base_pom/: base_pom.py  locators.py
test/domains/page_objects/components/reason_of_change_model/: locators.py  pom.py
test/domains/page_objects/landing_page/: locators.py  pom.py
test/domains/page_objects/okta_authentication_page/: locators.py  pom.py
test/domains/page_objects/uom_organizations_page/: pom.py
test/domains/page_objects/uom_organizations_page/create_organization_page/: locators.py  pom.py
test/domains/page_objects/uom_organizations_page/find_organization_page/: locators.py  pom.py
test/domains/page_objects/uom_users_page/: pom.py
test/domains/page_objects/uom_users_page/create_user_page/: locators.py  pom.py
test/domains/page_objects/uom_users_page/find_users_page/: pom.py  (+1 more)
test/domains/test_data/dto/: base_dto.py
test/features/: conftest.py
test/features/uom_users/: step_definitions.py  user_management.feature
test/resources/: JSON_blueprint.json
test/resources/test_data/: TEST-1.json
test/utils/: utilities.py
(+1 files in other folders)
